QStyleAnimation: make sure the last frame of animation is rendered

Amend to 8738f09b9fc1b35e3dc78211368d87069f3071f7.
The last frame of animation might be lacked if [_skip < fps].

Fixes: QTBUG-89118
Pick-to: 6.0 5.15
Change-Id: Ia0345e2aff7579afe2d60c4e7495bfaa1f36198c
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>